Tamanho de fonte e suas medidas
15/03/20201

--- a/pacoteDownload-Exercicios/Exercícios/ex017/fonte01.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex017/fonte01.html
@@ -7,11 +7,19 @@
     <title>Fontes em CSS</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
+            font-family: Arial, Helvetica, sans-serif;
+            /*
+            Medidas absolutas
+            cm, mm, in, px, pt, pc
 
-        h1, h2 {
-            font-family: 'Times New Roman', Times, serif;
+            Medidas relativas
+            em, ex, rem, vw, vh, %
+            16px geralmente = 1em
+
+            RECOMENDAÇÃO OFICIAL:
+            Use "px" ou "em".
+            */
+            font-size: 1em;
         }
     </style>
 </head>
