--- a/pacoteDownload-Exercicios/Exercícios/ex017/fonte01.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex017/fonte01.html
@@ -7,7 +7,7 @@
     <title>Fontes em CSS</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Work Sans', Helvetica, sans-serif;
             /*
             Medidas absolutas
             cm, mm, in, px, pt, pc
