--- a/pacoteDownload-Exercicios/Exercícios/ex018/font01.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex018/font01.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes com Google fonts</title>
     <style>
+        /*
         @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
         @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,900;1,100;1,200;1,300;1,600&display=swap');
@@ -25,6 +26,27 @@
             font-family: 'Courgette', 'sans-serif';
             font-size: 2em;
         }
+        */
+        @font-face {
+            font-family: 'Bang Bang';
+            src: url('fonts/Western Bang Bang.otf') format('opentype'), url('fonts/Western Bang Bang.ttf')  format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }      
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h1 {
+            font-family: 'Bang Bang', 'Times New Roman', Times, serif;
+            font-size: 3em;
+            font-weight: normal;
+        }
+
+        h2 {
+            font-family: 'Bang Bang', 'Times New Roman', Times, serif;
+            font-size: 3em;
+            font-weight: normal;
     </style>
 </head>
 <body>
