--- a/pacoteDownload-Exercicios/Exercícios/ex019/seletor01.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex019/seletor01.html
@@ -11,18 +11,18 @@
     <div class="container">
     <h1 id="principal">Criando sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
-    <h2>HTML intermediário</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
-    <h2>HTML avançado</h2>
+    <h2 class="basico">HTML básico</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae,<span class="basico"> voluptate laborum</span>, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
+    <h2 class="intermediario">HTML intermediário</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.<span class="destaque"> Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora.</span> Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
+    <h2 class="avancado">HTML avançado</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
     <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
-    <h2>CSS intermediário</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avancado">CSS avançado</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate laborum, voluptas nobis tempore eius alias iure architecto eos nulla tempora. Autem fugiat, voluptate illum obcaecati assumenda mollitia vitae tenetur!</p>
     </div>
 </body>
