--- a/pacoteDownload-Exercicios/Exercícios/ex021/index.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex021/index.html
@@ -8,16 +8,18 @@
     <style>
         h1 {
             background-color: lightgrey;
+
             height: 300px;
             width: 300px;
-            border-width: 10px;
-            border-style: solid;
-            border-color: darkslategray;
+            
+            border: 10px solid darkslategray;
 
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
+            padding: 10px;
+
+            margin: 20px auto 40px auto;
+
+            outline: 5px dashed salmon;
+            text-align: center;
         }
         a {
             border-width: 3px;
