Sombra nas Caixas
https://www.youtube.com/watch?v=JACiDRNWjjQ&list=PLHz_AreHm4dlUpEXkY1AyVLQGcpSgVF8s&index=27

--- a/pacoteDownload-Exercicios/Exercícios/ex021/caixa02.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex021/caixa02.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     <title>Grouping Tags</title>
     <style>
         body {
@@ -16,13 +18,17 @@
             padding: 10px;
             margin: 10px;
         }
-        nav {
-            background-color: #01603B;
-            text-align: center;
-        }
         h1 {
             text-align: center;
+            font-family: 'Mate SC', serif;
+            font-size: 55px;
         }
+        nav {
+            background-color: #032518;
+            padding: 3px;
+            text-align: center;
+            box-shadow: 3px 3px 4px 1px black;
+        }        
         nav > a {
             text-decoration: none;
             color: white;
@@ -48,6 +54,9 @@
             color: white;
             text-align: center;
             padding: 1px;
+            margin: 0px;
+        }
+        footer > p {
             margin: 0px;
         }
     </style>
