Caixas com vértices arredondados
https://www.youtube.com/watch?v=PGIrTzQqpqo&list=PLHz_AreHm4dlUpEXkY1AyVLQGcpSgVF8s&index=28

--- a/pacoteDownload-Exercicios/Exercícios/ex021/caixa02.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex021/caixa02.html
@@ -43,6 +43,7 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px;
         }
         article {
             background-color: rgb(139, 214, 139);
@@ -59,7 +60,7 @@
         }
         footer > p {
             margin: 0px;
-        }
+        }        
     </style>
 </head>
 <body>
@@ -67,10 +68,10 @@
         <h1>Fluminense</h1>
         <nav>
             <a href="#">Elenco</a>
-            <a href="#">Seja sócio</a>
             <a href="#">Títulos</a>
             <a href="#">Loja Oficial</a>
             <a href="#">Patrocinadores</a>
+            <a href="#">Seja sócio</a>
         </nav>
     </header>
     <main>
