--- a/pacoteDownload-Exercicios/Desafios/android.html
+++ b/pacoteDownload-Exercicios/Desafios/android.html
@@ -38,7 +38,7 @@
 
         <h2>Surge um novo mascote</h2>
 
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <strong><a href="https://en.wikipedia.org/wiki/Irina_Blok" target="_blank" class=""externo>Irina Blok</a></strong>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <strong><a href="https://en.wikipedia.org/wiki/Irina_Blok" target="_blank" class="externo">Irina Blok</a></strong>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
         <picture>
             <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg">
@@ -51,7 +51,9 @@
 
         <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 
          <aside>
              <h3>Quer aprender mais?</h3> 
