Foto do chad no fundo

--- a/pacoteDownload-Exercicios/Exercícios/ex022/fundo002.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex022/fundo002.html
@@ -7,10 +7,14 @@
     <title>Personalização dos fundos</title>
     <style>
         body {
-            background-image: url('img/pattern001.png');
+            background-image: url('https://i.imgflip.com/3umnr3.jpg');
             background-size: 100px 100px;
             background-repeat: repeat;
         }
+        h1 {
+            color: gray;
+        }
+       
     </style>
 </head>
 <body>
