--- a/pacoteDownload-Exercicios/Exercícios/ex022/fundo006.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex022/fundo006.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <style> 
     body {
+        height: 100vh;
         background-color: black;
         background-image: url('img/wallpaper002.jpg');
         background-position: center top;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
     }
 
     main {
