Background-attachment e shorthand.
https://www.youtube.com/watch?v=PzJwwA6LVts

--- a/pacoteDownload-Exercicios/Exercícios/ex022/fundo006.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex022/fundo006.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style> 
     body {
+        /*
         height: 100vh;
         background-color: black;
         background-image: url('img/wallpaper002.jpg');
         background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
+        */
+
+        /*
+        Shorthand - background
+        color > image > position >
+        repeat > [size] > attachment
+        */
+
+        background: black url(img/wallpaper002.jpg) center center no-repeat fixed;
+        background-size: cover;
     }
 
     main {
         background-color: white;
-        width: 400px;
+        max-width: 500px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -31,6 +43,25 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus tenetur reprehenderit incidunt dolorem quos quod, distinctio nostrum harum perferendis doloremque adipisci unde voluptate ratione eius fugiat numquam corporis quibusdam optio!
         
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas assumenda ipsum accusantium fuga aut, ex consequatur ipsa quaerat quam obcaecati totam, similique harum unde ea reiciendis nostrum pariatur et cupiditate!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, modi eius accusamus dicta esse temporibus quis voluptatum explicabo? Alias pariatur sunt voluptatibus officia eos corrupti natus nulla repellendus, maiores fugiat?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos necessitatibus officiis qui quia ab, reiciendis recusandae cumque voluptatum ut ex perferendis nostrum iste doloremque cupiditate! Soluta a nisi libero repellat. <br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, distinctio quasi. Earum amet ut vitae. Repellat, consequatur doloribus iusto tenetur minima quidem neque numquam accusantium voluptatibus vero, dolor est error?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aperiam, voluptate optio ratione officiis blanditiis fugiat fugit minima laudantium autem quam commodi rem soluta est numquam totam velit in possimus? <br>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque culpa officiis adipisci placeat, maxime ut in? Saepe nesciunt, nobis ab placeat error dolor assumenda ad dolore ipsam a quod aspernatur.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, modi eius accusamus dicta esse temporibus quis voluptatum explicabo? Alias pariatur sunt voluptatibus officia eos corrupti natus nulla repellendus, maiores fugiat?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos necessitatibus officiis qui quia ab, reiciendis recusandae cumque voluptatum ut ex perferendis nostrum iste doloremque cupiditate! Soluta a nisi libero repellat. <br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, distinctio quasi. Earum amet ut vitae. Repellat, consequatur doloribus iusto tenetur minima quidem neque numquam accusantium voluptatibus vero, dolor est error?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, modi eius accusamus dicta esse temporibus quis voluptatum explicabo? Alias pariatur sunt voluptatibus officia eos corrupti natus nulla repellendus, maiores fugiat?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos necessitatibus officiis qui quia ab, reiciendis recusandae cumque voluptatum ut ex perferendis nostrum iste doloremque cupiditate! Soluta a nisi libero repellat. <br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, distinctio quasi. Earum amet ut vitae. Repellat, consequatur doloribus iusto tenetur minima quidem neque numquam accusantium voluptatibus vero, dolor est error?
         </p>
     </main>
 </body>
