--- a/pacoteDownload-Exercicios/Exercícios/ex023/tabela001.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex023/tabela001.html
@@ -12,20 +12,19 @@
 
             table {
                 width: 400px;
+                height: 400px;
                 border-collapse: collapse;
-            }
-
-            tr.linha {
-                background-color: lightgrey;
-            }
+            }          
 
             td {
                 border: 1px solid black;
                 padding: 8px;
-            }
+                text-align: center;
+                vertical-align: middle;
+            }            
 
-            td.dado {
-                background-color: lightskyblue;
+            .numero {
+                text-align: right;
             }
         </style>
 
@@ -42,11 +41,11 @@
     <table>
         <tr> <!-- Primeira linha -->
             <td>A1</td>
-            <td>B1</td>
+            <td class="numero">B1</td>
             <td>C1</td>
         </tr>
 
-        <tr class="linha"> <!-- Segunda linha -->
+        <tr> <!-- Segunda linha -->
             <td>A3</td> 
             <td>B3</td>
             <td>C3</td>
@@ -55,7 +54,7 @@
         <tr> <!-- Terceira linha -->
             <td>A4</td>
             <td>B4</td>
-            <td class="dado">C4</td>
+            <td class="numero">C4</td>
         </tr>
 
         <tr> <!-- Quarta linha -->
