--- a/pacoteDownload-Exercicios/Exercícios/ex023/tabela002.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex023/tabela002.html
@@ -25,6 +25,10 @@
             color: white;
         }
 
+        tbody > tr:nth-child(2n) {
+            background-color: lightgrey;
+        }
+
         td.num {
             text-align: right;
         }
