Cabeçalho fixo em tabelas grandes
https://www.youtube.com/watch?v=k277B58kC9c

--- a/pacoteDownload-Exercicios/Exercícios/ex023/tabela002.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex023/tabela002.html
@@ -13,6 +13,8 @@
         table {
             width: 500px;
             border-collapse: collapse; /*Para eliminar os espaços*/
+            position: relative;
+
         }
 
         td, th {
@@ -23,6 +25,13 @@
         thead, tfoot {
             background-color: grey;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: grey;
+
         }
 
         tbody > tr:nth-child(2n) {
@@ -132,5 +141,10 @@
             
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia enim pariatur numquam deserunt dolore, perspiciatis cumque, error placeat rerum aliquid ex nisi? Doloremque ducimus atque libero, qui beatae nobis quo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique temporibus perferendis dolor dolorum excepturi illo incidunt architecto voluptas perspiciatis nihil. Ad inventore voluptate eius quod rem neque velit non veritatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis accusamus ad dolor, commodi molestiae nostrum maxime blanditiis nesciunt pariatur mollitia, vel natus veniam dicta accusantium quidem neque voluptatem omnis debitis!</p>
 </body>
 </html>
