--- a/pacoteDownload-Exercicios/Exercícios/ex023/tabela004.html
+++ b/pacoteDownload-Exercicios/Exercícios/ex023/tabela004.html
@@ -28,14 +28,20 @@
     <h1>Exercício de tabela</h1>
     <table>
         <thead>
+            <tfoot>
+                <tr>
+                    <th colspan="4" scope="row">Total</th>
+                    <td>1000</td>
+                </tr>
+            </tfoot>
             <tr>
-                <th>Grupos</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
             <tbody>
                 <tr>
-                <th rowspan="3">Mulheres</th>                
+                <th rowspan="3" scope="rowgroup">Mulheres</th>                
                     <td>Ana Beatriz</td>
                     <td>Alien</td>
                     <td>Rambo</td>
@@ -54,7 +60,7 @@
                     <td>Era uma vez</td>
                 </tr>
                 <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                     <td>Bruno Mendonça</td>
                     <td>Advogado do diabo</td>
                     <td>Tropa de elite</td>
